# inpainter

./: .gitignore  README.md
app/: .env  AddMaskScreen.js  App.js  BottomButtons.js  Canvas.js  CanvasContext.js  ClearCanvasButton.js  GetResultScreen.js  TakePhotoScreen.js  package.json  pan.js  usePanResponder.js
backend/: app.js  package.json  utils.js
backend/queue/: config.json  index.js  schema.json
backend/routes/: index.js
backend/views/: index.jade
function/: .firebaserc
function/functions/: index.js  package-lock.json  package.json  queue.js
worker/: pyproject.toml
worker/inpainter_worker/: event.py  generator.py  main.py  on_start.sh  pika_queue.py  shape_filler.py  storage.py
